# xolo

./: pyproject.toml
src/xolo/: __about__.py  hooks.py  iterators.py  monkey_patching.py  moving_average.py  regex.py  schemas.py  spans.py  symbols.py  tokens.py  torch.py  typing.py  utils.py
src/xolo/utils/: common.py  iterators.py  schemas.py  spans.py  symbols.py  tokens.py  torch.py  typing.py
tests/: test_symbols.py
