[project]
name = "xolo"
version = "0.0.1"
requires-python = ">= 3.11"
dependencies = [
    "docstring_parser",
    "jsonref",
    "pydantic",
    "python-slugify",
    "regex",
]
readme = "README.md"
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/marcovzla/xolo"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
